docs/css/style -1.css
/* ... */
.large-button:hover::after,
.large-button:focus::after {
  opacity: 1;
  transform: scale(1.5);
}

/* --------------------------------------- */
/* ------- Page Specific Index Home ------ */
/* --------------------------------------- */

/* --------------------------------------- */
/* ---------- End of Index Home ---------- */
/* --------------------------------------- */



/* --------------------------------------- */
/* --------------- Navigation ------------ */
/* --------------------------------------- */

.container {
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
}

header {
  background:transparent;
  color: hsl(var(--clr-light));
  padding: var(--space-l) 0;
  position: relative;
}

header::after {
  content: "";
  clear: both;
  display: block;
}

.logo {
  font-family: var(--ff-serif);
  font-size: var(--fs-400);
  color: hsl(var(--clr-accent));
  margin: 0;
  padding: 0 0 0 0.6em;
  }

.logo span {
  font-family: var(--ff-serif);
  color:hsl(var(--clr-span));
  font-size: var(--fs-400);
  margin: 0 0.5em 0 0.5em;
}

.primary-navigation {
  position: absolute;
  top: 100%;
  right: 0%;
  background: #464655;
  transition: clip-path ease-in-out 700ms;
  margin: 0;
  padding: 0;
  list-style: none;
}
.primary-navigation[data-state="opened"] {
  animation: clipPathCircleOpen 750ms ease-in-out forwards;
  display: block;
}

.primary-navigation[data-state="closing"] {
  animation: clipPathCircleClose 750ms ease-in-out forwards;
}
.primary-navigation[data-state="closed"] {
  display: none;
}

@keyframes clipPathCircleOpen {
  0% { clip-path: circle(0% at top right); }
  100% { clip-path: circle(250% at top right); }
}
@keyframes clipPathCircleClose {
  0% { clip-path: circle(250% at top right); }
  100% { clip-path: circle(0% at top right); }
}

.site-nav li {
  border-bottom: 1px solid #575766;
}

.site-nav li:last-child {
  border-bottom: none;
}

.site-nav a {
  color: #ebebd3;
  display: block;
  padding: 2em 4em 2em 1.5em;
  text-transform: uppercase;
  text-decoration: none;
}

.site-nav a:hover,
.site-nav a:focus {
  background: #e4b363;
  color: #464655;
}

.site-nav--icon {
  display: inline-block;
  font-size: 1.5em;
  margin-right: 1em;
  width: 1.1em;
  text-align: right;
  color: rgba(255, 255, 255, 0.4);
}


.menu-toggle {
  padding: 1em;
  background: transparent;
  border: 0;
  position: absolute;
  top: 0.5em;
  right: 0.5em;
  cursor: pointer;
}

.menu-toggle:focus-visible {
  outline: 4px solid #e4b363;
}

.hamburger,
.hamburger::before,
.hamburger::after {
  content: "";
  display: block;
  background: #ebebd3;
  height: 3px;
  width: 1.75em;
  border-radius: 3px;
  transition: all ease-in-out 500ms;
}

.hamburger::before {
  transform: translateY(-6px);
}

.hamburger::after {
  transform: translateY(3px);
}

[aria-expanded="true"] .hamburger {
  transform: rotate(45deg);
}

[aria-expanded="true"] .hamburger::before {
  opacity: 0;
}

[aria-expanded="true"] .hamburger::after {
  transform: translateY(-3px) rotate(-90deg);
}

.visually-hidden {
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  overflow: hidden;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

ul {
  @media (hover) and (prefers-reduced-motion: no-preference) {
    &>li {
      opacity: 1;
      transform-origin: left center;
      transition:
        transform 1s var(--ease-spring-3),
        opacity .3s var(--ease-3);
    }

    &:hover>li:not(:hover) {
      opacity: .25;
      transform: scale(0.8);
    }
  }
}

@layer support.demo {
  ul {
     list-style: none;
  }
}
/* --------------------------------------- */
/* ---------- End of Navigation ---------- */
/* --------------------------------------- */


/* --------------------------------------- */
/* ------------- Intro Page -------------- */
/* --------------------------------------- */

.intro {
  display: grid;
  grid-template-rows: 3rem 1fr;
  min-height: 100svh;
  /* Center items horizontally and vertically */
  overflow: clip;
}

.intro>* {
  container-type: inline-size;
}

.intro-content {
  display: grid;
  place-items: center;
/* Center items horizontally and vertically */
}

.intro::before {
  content: '';
  min-height: 100svh;
  width: 100%;
  position: fixed;
  background:
    linear-gradient(90deg,
      color-mix(in hsl, canvasText, transparent 70%) 1px,
      transparent 1px 45px) 50% 50% / 45px 45px,
    linear-gradient(color-mix(in hsl, canvasText, transparent 70%) 1px, transparent 1px 45px) 50% 50% / 45px 45px;
  mask: linear-gradient(-20deg, transparent 50%, white) 100%;
  transform-style: preserve-3d;
  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out, background-position 0.3s ease-in-out;
}

.intro-content h1, h2 {
  font-size: var(--fs-500);
  font-family:var(--ff-serif);
  letter-spacing: 0.08em;
  padding: 0.6em 0;
  color: hsl(var(--clr-accent));
  font-style: italic;
  text-align: center;
}

.intro-content p {
  font-size: var(--fs-300);
  color: hsl(var(--clr-accent));
  text-align: center;
  font-family: var(--ff-serif);
}

.intro-content p span {
  padding: 1rem 0;
  font-size: var(--fs-400);
  font-family: var(--ff-serif);
  color: hsl(var(--clr-span));
}

.intro-content h1, h2, h3 {
  font-size: var(--fs-400);
  font-family: var(--ff-serif);
  letter-spacing: 0.08em;
  padding: 0.6rem 0;
  color: hsl(var(--clr-accent));
  font-style: italic;
  text-align: center;
}

.streamers {
  display: block;
  text-align: center;
  margin:var(--space-m) auto;
  position: relative; /* Ensure the container is positioned relative */
}

.streamers p {
  font-size: var(--fs-300);
  font-family: var(--ff-serif);
  color: hsl(var(--clr-accent));
  text-align: center;
  justify-content: center; /* Center horizontally */
  padding-inline: 0 auto; 
}

.streamers a {
  color:hsl(var(--clr-accent));
  text-decoration: none;
  position: relative; /* Ensure the link is positioned relative */
  display: inline-block; /* Ensure the link is treated as a block element */
}
/* ... */

